src/objects/ffbf__BankAccountTest__c.object
<CustomObject>
    <fields>
        <fullName>ffbf__AccountNumber__c</fullName>
        <defaultValue>TEXT(123)</defaultValue>
        <label>Account Number</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BankAccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Currency</label>
        <referenceTo>ffbf__AccountingCurrencyTest__c</referenceTo>
        <relationshipLabel>Bank Account Tests</relationshipLabel>
        <relationshipName>BankAccountTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbf__BankCode__c</fullName>
        <label>Bank Code</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffbf__BranchNumber__c</fullName>
        <label>Branch Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__ChargesBankAccountIdentifier__c</fullName>
        <label>Charges Bank Account Identifier</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CodewordNumber10__c</fullName>
        <label>Codeword Number 10</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CodewordNumber1__c</fullName>
        <label>Codeword Number 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CodewordNumber2__c</fullName>
        <label>Codeword Number 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CodewordText10__c</fullName>
        <label>Codeword Text 10</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CodewordText1__c</fullName>
        <label>Codeword Text 1</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CodewordText2__c</fullName>
        <label>Codeword Text 2</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__ConfidentialPayments__c</fullName>
        <label>Confidential Payments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__DebitAccountIdentifier2__c</fullName>
        <formula>If ( ffbf__BankAccountCurrency__r.Name == &quot;GBP&quot;, ffbf__DebitAccountIdentifier__c, ffbf__PaymentBankIndentifier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit Account Identifier2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__DebitAccountIdentifier__c</fullName>
        <formula>ffbf__SortCode__c &amp; ffbf__AccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit Account Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__ExportFileName__c</fullName>
        <label>Export File Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__FXDealRate__c</fullName>
        <label>FX Deal Rate</label>
        <precision>15</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__FXDeal__c</fullName>
        <label>FX Deal</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__IntermediaryBank__c</fullName>
        <label>Intermediary Bank</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Company</label>
        <referenceTo>ffbf__CompanyTest__c</referenceTo>
        <relationshipName>BankFormatBankAccountTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentBankIndentifier__c</fullName>
        <label>Payment Bank Indentifier</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentChargesCode__c</fullName>
        <label>Payment Charges Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SHA</fullName>
                    <default>true</default>
                    <label>SHA</label>
                </value>
                <value>
                    <fullName>OUR</fullName>
                </value>
                <value>
                    <fullName>BEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbf__PaymentInstitutionIdentifier__c</fullName>
        <label>Payment Institution Identifier</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__RTGSRequired__c</fullName>
        <label>RTGS Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbf__RemittanceAdvice__c</fullName>
        <label>Remittance Advice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbf__SortCode__c</fullName>
        <label>Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Bank Account Test</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Account Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>